[package]
name = "onestream"
version = "0.1.0"
authors = ["MuhammadHassan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.16", features = ["v1_14"] }
structopt = { version = "0.3", default-features = false }
anyhow = "1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "verbose_main"
path = "src/verbose_main.rs"
